an object to get current date has been made. the object is consists of 5 functions.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
     <div id="container">
-        <div id="date"><span id="todaysDate3"></span>,&nbsp;<span id="todaysDate4"></span>&nbsp;or&nbsp;<span
-                id="todaysDate"></span>,&nbsp;<span id="todaysDate2"></span>
+        <div id="date"><span id="todaysDate"></span>,&nbsp;<span id="todaysDate2"></span>&nbsp;or&nbsp;<span
+                id="todaysDate3"></span>,&nbsp;<span id="todaysDate4"></span>
         </div>
     </div>
     </div>
